syntax="proto3";

package transport_router_proto;

import "graph.proto";

message RouterSettings {
	uint32 bus_wait_time = 1;
	double bus_velocity = 2;
}

message Router {
	RouterSettings router_settings = 1;
    Graph graph = 2;
}
